--- a/python-numpy-pandas/pyvenv.cfg
+++ b/python-numpy-pandas/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Users\info\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
 version = 3.12.4
-executable = C:\Users\info\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\info\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\info\python-numpy-pandas\python-numpy-pandas
+executable = C:\Users\info\python-numpy-pandas\python-numpy-pandas\Scripts\python.exe
+command = C:\Users\info\python-numpy-pandas\python-numpy-pandas\Scripts\python.exe -m venv C:\Users\info\python-numpy-pandas\python-numpy-pandas
